# urdf-for-ros2-checkpoint-3

./: .gitignore  CMakeLists.txt  README.md  barista.rviz  package.xml
launch/: barista_urdf.launch.py  barista_xacro.launch.py
rviz/: barista.rviz
urdf/: barista_robot_model.urdf
worlds/: empty.sdf
xacro/: barista_robot_model.urdf.xacro  caster_wheel.xacro  cup_holder_tray.xacro  drive_wheel.xacro  laser_scanner.xacro  standoff_rod.xacro
